Fix button vertical align
`a.button` / `button.button`

--- a/meinberlin/assets/scss/components/_button.scss
+++ b/meinberlin/assets/scss/components/_button.scss
@@ -37,6 +37,7 @@
     padding-left: 1em;
     padding-right: 1em;
     margin: 0;
+    vertical-align: middle;
 }
 
 .button {
